Auction flipping implimented

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,21 @@
 cmake_minimum_required(VERSION 3.8)
 
-project(bazcal LANGUAGES C CXX)
+project(bazcal-lf LANGUAGES C CXX)
 
 add_subdirectory(deps/aegis)
 
-add_executable(bazcal
+add_subdirectory(deps/bazcal)
+
+add_executable(bazcal-lf
     src/main.cc
     src/embeds.cc
     src/handlers.cc
+    src/utils.cc
 )
 
 include_directories(include)
+include_directories(deps/bazcal/include)
 
-target_link_libraries(bazcal aegis pthread)
+find_package(Threads)
+
+target_link_libraries(bazcal-lf aegis Threads::Threads bazcal curl sqlite3)
