--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "deps/aegis"]
 	path = deps/aegis
 	url = https://github.com/zeroxs/aegis.cpp.git
+[submodule "deps/bazcal"]
+	path = deps/bazcal
+	url = https://github.com/Wykerd/libbazcal.git
